# apex-sdlc

./: README.md  ROADMAP.md
docs/: APEX-Framework.md  apex-framework.html
platform/: CLAUDE.md  README.md  docker-compose.yml  project-manifest.yaml
platform/backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml
platform/backend/app/: __init__.py
platform/backend/app/core/: config.py  logging.py
platform/backend/app/db/: base.py  session.py
platform/backend/app/db/migrations/: env.py
platform/frontend/: CLAUDE.md  next.config.mjs  package-lock.json  package.json
platform/frontend/src/app/projects/[projectId]/: page.tsx
platform/frontend/src/app/projects/[projectId]/integrations/: page.tsx
platform/frontend/src/components/integrations/: AddIntegrationDialog.tsx  IntegrationCard.tsx  LLMProviderBadge.tsx  index.ts
platform/frontend/src/components/projects/: LiveMetricsBar.tsx
platform/frontend/src/lib/queries/: integrations.ts
platform/frontend/src/types/: integration.ts
portal-prototype/: package.json
portal-prototype/src/: dashboard-governance.html  dashboard.html  index.html  portal-config.json
